--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "homepage",
   "private": true,
+  "homepage": "https://tranxuantoan.github.io/miniProject",
   "version": "0.0.0",
   "type": "module",
+  "predeploy": "yarn run build",
+  "deploy": "gh-pages -d dist",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
     "antd": "^5.12.1",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
